js/js.translator/testData/incremental/invalidation/companionPropertiesWithIntraModuleInliner/main/m.kt
fun box(stepId: Int, isWasm: Boolean): String {
    if (test() != stepId) return "Fail"
    return "OK"
}
